further improved the explicit interpolation - now more precise then interpolation with MathSAT, while being also faster in many cases
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@6001 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c